--- a/.github/workflows/acctest-terraform-lint.yml
+++ b/.github/workflows/acctest-terraform-lint.yml
@@ -29,23 +29,22 @@ jobs:
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-      - run: cd tools && go install github.com/katbyte/terrafmt
-      # - run: terrafmt diff ./aws --check --pattern '*_test.go' --fmtcompat
-      - run: |
-          # resource_aws_ecs_capacity_provider_test.go: two format verbs on one line (%[2]q = %[3]q). https://github.com/katbyte/terrafmt/issues/46
-          # resource_aws_efs_file_system_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
-          # resource_aws_kms_grant_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
-          # resource_aws_quicksight_user_test.go: format verb as resource name (%[1]q). https://github.com/katbyte/terrafmt/issues/48
-          # resource_aws_sns_platform_application_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
-          find ./aws -type f -name '*_test.go' \
-            | sort -u \
-            | grep -v resource_aws_ecs_capacity_provider_test.go \
-            | grep -v resource_aws_efs_file_system_test.go \
-            | grep -v resource_aws_kms_grant_test.go \
-            | grep -v resource_aws_quicksight_user_test.go \
-            | grep -v resource_aws_s3_bucket_object_test.go \
-            | grep -v resource_aws_sns_platform_application_test.go \
-            | xargs -I {} terrafmt diff --check --fmtcompat {}
+      # - run: cd tools && go install github.com/katbyte/terrafmt
+      # - run: |
+      #     # resource_aws_ecs_capacity_provider_test.go: two format verbs on one line (%[2]q = %[3]q). https://github.com/katbyte/terrafmt/issues/46
+      #     # resource_aws_efs_file_system_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
+      #     # resource_aws_kms_grant_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
+      #     # resource_aws_quicksight_user_test.go: format verb as resource name (%[1]q). https://github.com/katbyte/terrafmt/issues/48
+      #     # resource_aws_sns_platform_application_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
+      #     find ./aws -type f -name '*_test.go' \
+      #       | sort -u \
+      #       | grep -v resource_aws_ecs_capacity_provider_test.go \
+      #       | grep -v resource_aws_efs_file_system_test.go \
+      #       | grep -v resource_aws_kms_grant_test.go \
+      #       | grep -v resource_aws_quicksight_user_test.go \
+      #       | grep -v resource_aws_s3_bucket_object_test.go \
+      #       | grep -v resource_aws_sns_platform_application_test.go \
+      #       | xargs -I {} terrafmt diff --check --fmtcompat {}
 
   validate-terraform:
     runs-on: ubuntu-latest
@@ -62,32 +61,32 @@ jobs:
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-      - run: cd tools && go install github.com/katbyte/terrafmt
+      # - run: cd tools && go install github.com/katbyte/terrafmt
 
-      - run: cd tools && go install github.com/terraform-linters/tflint
+      # - run: cd tools && go install github.com/terraform-linters/tflint
 
-      - uses: actions/cache@v2
-        name: Cache plugin dir
-        with:
-          path: ~/.tflint.d/plugins
-          key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
+      # - uses: actions/cache@v2
+      #   name: Cache plugin dir
+      #   with:
+      #     path: ~/.tflint.d/plugins
+      #     key: ${{ matrix.os }}-tflint-${{ hashFiles('.tflint.hcl') }}
 
-      - run: tflint --init
+      # - run: tflint --init
       
-      - run: |
-          # resource_aws_ecs_capacity_provider_test.go: two format verbs on one line (%[2]q = %[3]q). https://github.com/katbyte/terrafmt/issues/46
-          # resource_aws_efs_file_system_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
-          # resource_aws_kms_grant_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
-          # resource_aws_lambda_permission_test.go: format verb as resource name ("%s"). https://github.com/katbyte/terrafmt/issues/48
-          # resource_aws_quicksight_user_test.go: format verb as resource name (%[1]q). https://github.com/katbyte/terrafmt/issues/48
-          # resource_aws_sns_platform_application_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
-          find ./aws -type f -name '*_test.go' \
-            | sort -u \
-            | grep -v resource_aws_ecs_capacity_provider_test.go \
-            | grep -v resource_aws_efs_file_system_test.go \
-            | grep -v resource_aws_kms_grant_test.go \
-            | grep -v resource_aws_lambda_permission_test.go \
-            | grep -v resource_aws_quicksight_user_test.go \
-            | grep -v resource_aws_s3_bucket_object_test.go \
-            | grep -v resource_aws_sns_platform_application_test.go \
-            | ./scripts/validate-terraform.sh
+      # - run: |
+      #     # resource_aws_ecs_capacity_provider_test.go: two format verbs on one line (%[2]q = %[3]q). https://github.com/katbyte/terrafmt/issues/46
+      #     # resource_aws_efs_file_system_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
+      #     # resource_aws_kms_grant_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
+      #     # resource_aws_lambda_permission_test.go: format verb as resource name ("%s"). https://github.com/katbyte/terrafmt/issues/48
+      #     # resource_aws_quicksight_user_test.go: format verb as resource name (%[1]q). https://github.com/katbyte/terrafmt/issues/48
+      #     # resource_aws_sns_platform_application_test.go: argument name is format verb and replaced with quoted string. https://github.com/katbyte/terrafmt/issues/47
+      #     find ./aws -type f -name '*_test.go' \
+      #       | sort -u \
+      #       | grep -v resource_aws_ecs_capacity_provider_test.go \
+      #       | grep -v resource_aws_efs_file_system_test.go \
+      #       | grep -v resource_aws_kms_grant_test.go \
+      #       | grep -v resource_aws_lambda_permission_test.go \
+      #       | grep -v resource_aws_quicksight_user_test.go \
+      #       | grep -v resource_aws_s3_bucket_object_test.go \
+      #       | grep -v resource_aws_sns_platform_application_test.go \
+      #       | ./scripts/validate-terraform.sh
