--- a/.github/workflows/terraform_provider.yml
+++ b/.github/workflows/terraform_provider.yml
@@ -11,7 +11,7 @@ on:
       - .go-version
       - .golangci.yml
       - .semgrep.yml
-      - aws/**
+      # - aws/**
       - providerlint/**
       - docs/index.md
       - docs/data-sources/**
@@ -55,37 +55,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      continue-on-error: true
-      id: cache-terraform-plugin-dir
-      timeout-minutes: 2
-      with:
-        path: terraform-plugin-dir
-        key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    # See also: https://github.com/actions/setup-go/pull/62
-    - run: echo "GO_VERSION=$(cat .go-version)" >> $GITHUB_ENV
-    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ env.GO_VERSION }}
-    # See also: https://github.com/actions/setup-go/issues/54
-    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-      name: go env
-      run: |
-        echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-      uses: actions/cache@v2
-      with:
-        path: ${{ env.GOCACHE }}
-        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-      uses: actions/cache@v2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-      name: go build
-      run: go build -o terraform-plugin-dir/registry.terraform.io/hashicorp/aws/99.99.99/$(go env GOOS)_$(go env GOARCH)/terraform-provider-aws .
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   id: cache-terraform-plugin-dir
+    #   timeout-minutes: 2
+    #   with:
+    #     path: terraform-plugin-dir
+    #     key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # # See also: https://github.com/actions/setup-go/pull/62
+    # - run: echo "GO_VERSION=$(cat .go-version)" >> $GITHUB_ENV
+    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+    #   uses: actions/setup-go@v2
+    #   with:
+    #     go-version: ${{ env.GO_VERSION }}
+    # # See also: https://github.com/actions/setup-go/issues/54
+    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+    #   name: go env
+    #   run: |
+    #     echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
+    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+    #   uses: actions/cache@v2
+    #   with:
+    #     path: ${{ env.GOCACHE }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+    #   uses: actions/cache@v2
+    #   with:
+    #     path: ~/go/pkg/mod
+    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+    #   name: go build
+    #   run: go build -o terraform-plugin-dir/registry.terraform.io/hashicorp/aws/99.99.99/$(go env GOOS)_$(go env GOARCH)/terraform-provider-aws .
 
   terraform_providers_schema:
     name: terraform providers schema
@@ -93,35 +93,35 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/cache@v2
-      continue-on-error: true
-      id: cache-terraform-providers-schema
-      timeout-minutes: 2
-      with:
-        path: terraform-providers-schema
-        key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
-      uses: actions/cache@v2
-      timeout-minutes: 2
-      with:
-        path: terraform-plugin-dir
-        key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: ${{ env.TERRAFORM_VERSION }}
-        terraform_wrapper: false
-    - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
-      name: terraform init
-      run: |
-        # We need a file to initialize the provider
-        echo 'data "aws_partition" "example" {}' > example.tf
-        terraform init -plugin-dir terraform-plugin-dir
-    - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
-      name: terraform providers schema
-      run: |
-        mkdir terraform-providers-schema
-        terraform providers schema -json > terraform-providers-schema/schema.json
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   id: cache-terraform-providers-schema
+    #   timeout-minutes: 2
+    #   with:
+    #     path: terraform-providers-schema
+    #     key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
+    #   uses: actions/cache@v2
+    #   timeout-minutes: 2
+    #   with:
+    #     path: terraform-plugin-dir
+    #     key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
+    #   uses: hashicorp/setup-terraform@v1
+    #   with:
+    #     terraform_version: ${{ env.TERRAFORM_VERSION }}
+    #     terraform_wrapper: false
+    # - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
+    #   name: terraform init
+    #   run: |
+    #     # We need a file to initialize the provider
+    #     echo 'data "aws_partition" "example" {}' > example.tf
+    #     terraform init -plugin-dir terraform-plugin-dir
+    # - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
+    #   name: terraform providers schema
+    #   run: |
+    #     mkdir terraform-providers-schema
+    #     terraform providers schema -json > terraform-providers-schema/schema.json
 
   providerlint:
     needs: [go_build]
@@ -137,21 +137,21 @@ jobs:
     - name: go env
       run: |
         echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ${{ env.GOCACHE }}
-        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    - run: cd providerlint && go install .
-    - name: providerlint
-      run: make providerlint
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ${{ env.GOCACHE }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ~/go/pkg/mod
+    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    # - run: cd providerlint && go install .
+    # - name: providerlint
+    #   run: make providerlint
 
   go_generate:
     name: go generate
@@ -168,23 +168,23 @@ jobs:
     - name: go env
       run: |
         echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ${{ env.GOCACHE }}
-        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    - run: make gen
-    - name: Check for Git Differences
-      run: |
-        git diff --compact-summary --exit-code || \
-          (echo; echo "Unexpected difference in directories after code generation. Run 'make gen' command and commit."; exit 1)
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ${{ env.GOCACHE }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ~/go/pkg/mod
+    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    # - run: make gen
+    # - name: Check for Git Differences
+    #   run: |
+    #     git diff --compact-summary --exit-code || \
+    #       (echo; echo "Unexpected difference in directories after code generation. Run 'make gen' command and commit."; exit 1)
 
   go_test:
     name: go test
@@ -201,19 +201,19 @@ jobs:
     - name: go env
       run: |
         echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ${{ env.GOCACHE }}
-        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    - run: go test ./... -timeout=5m
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ${{ env.GOCACHE }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ~/go/pkg/mod
+    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    # - run: go test ./... -timeout=5m
 
   golangci-lint:
     needs: [go_build]
@@ -229,21 +229,21 @@ jobs:
     - name: go env
       run: |
         echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ${{ env.GOCACHE }}
-        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    - run: cd tools && go install github.com/golangci/golangci-lint/cmd/golangci-lint
-    - run: golangci-lint run ./aws/...
-    - run: cd providerlint && golangci-lint run ./...
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ${{ env.GOCACHE }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ~/go/pkg/mod
+    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    # - run: cd tools && go install github.com/golangci/golangci-lint/cmd/golangci-lint
+    # - run: golangci-lint run ./aws/...
+    # - run: cd providerlint && golangci-lint run ./...
 
   importlint:
     needs: [go_build]
@@ -259,20 +259,20 @@ jobs:
     - name: go env
       run: |
         echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ${{ env.GOCACHE }}
-        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - uses: actions/cache@v2
-      continue-on-error: true
-      timeout-minutes: 2
-      with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    - run: cd tools && go install github.com/pavius/impi/cmd/impi
-    - run: impi --local . --scheme stdThirdPartyLocal ./...
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ${{ env.GOCACHE }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - uses: actions/cache@v2
+    #   continue-on-error: true
+    #   timeout-minutes: 2
+    #   with:
+    #     path: ~/go/pkg/mod
+    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    # - run: cd tools && go install github.com/pavius/impi/cmd/impi
+    # - run: impi --local . --scheme stdThirdPartyLocal ./...
 
   semgrep:
     runs-on: ubuntu-latest
@@ -300,18 +300,18 @@ jobs:
         path: ~/go/pkg/mod
         key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
     - run: cd tools && go install github.com/bflad/tfproviderdocs
-    - uses: actions/cache@v2
-      timeout-minutes: 2
-      with:
-        path: terraform-providers-schema
-        key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    - name: tfproviderdocs check
-      run: |
-        tfproviderdocs check \
-          -allowed-resource-subcategories-file website/allowed-subcategories.txt \
-          -enable-contents-check \
-          -ignore-file-missing-data-sources aws_alb,aws_alb_listener,aws_alb_target_group \
-          -ignore-file-missing-resources aws_alb,aws_alb_listener,aws_alb_listener_certificate,aws_alb_listener_rule,aws_alb_target_group,aws_alb_target_group_attachment \
-          -provider-source registry.terraform.io/hashicorp/aws \
-          -providers-schema-json terraform-providers-schema/schema.json \
-          -require-resource-subcategory
+    # - uses: actions/cache@v2
+    #   timeout-minutes: 2
+    #   with:
+    #     path: terraform-providers-schema
+    #     key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    # - name: tfproviderdocs check
+    #   run: |
+    #     tfproviderdocs check \
+    #       -allowed-resource-subcategories-file website/allowed-subcategories.txt \
+    #       -enable-contents-check \
+    #       -ignore-file-missing-data-sources aws_alb,aws_alb_listener,aws_alb_target_group \
+    #       -ignore-file-missing-resources aws_alb,aws_alb_listener,aws_alb_listener_certificate,aws_alb_listener_rule,aws_alb_target_group,aws_alb_target_group_attachment \
+    #       -provider-source registry.terraform.io/hashicorp/aws \
+    #       -providers-schema-json terraform-providers-schema/schema.json \
+    #       -require-resource-subcategory
