--- a/.github/workflows/terraform_provider.yml
+++ b/.github/workflows/terraform_provider.yml
@@ -11,7 +11,7 @@ on:
       - .go-version
       - .golangci.yml
       - .semgrep.yml
-      # - aws/**
+      - internal/**
       - providerlint/**
       - docs/index.md
       - docs/data-sources/**
@@ -26,7 +26,7 @@ on:
 
 env:
   AWS_DEFAULT_REGION: us-west-2
-  TERRAFORM_VERSION: "0.14.8"
+  TERRAFORM_VERSION: "1.0.6"
 
 jobs:
   go_mod_download:
@@ -55,37 +55,37 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    # - uses: actions/cache@v2
-    #   continue-on-error: true
-    #   id: cache-terraform-plugin-dir
-    #   timeout-minutes: 2
-    #   with:
-    #     path: terraform-plugin-dir
-    #     key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    # # See also: https://github.com/actions/setup-go/pull/62
-    # - run: echo "GO_VERSION=$(cat .go-version)" >> $GITHUB_ENV
-    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-    #   uses: actions/setup-go@v2
-    #   with:
-    #     go-version: ${{ env.GO_VERSION }}
-    # # See also: https://github.com/actions/setup-go/issues/54
-    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-    #   name: go env
-    #   run: |
-    #     echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-    #   uses: actions/cache@v2
-    #   with:
-    #     path: ${{ env.GOCACHE }}
-    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-    #   uses: actions/cache@v2
-    #   with:
-    #     path: ~/go/pkg/mod
-    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    # - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
-    #   name: go build
-    #   run: go build -o terraform-plugin-dir/registry.terraform.io/hashicorp/aws/99.99.99/$(go env GOOS)_$(go env GOARCH)/terraform-provider-aws .
+    - uses: actions/cache@v2
+      continue-on-error: true
+      id: cache-terraform-plugin-dir
+      timeout-minutes: 2
+      with:
+        path: terraform-plugin-dir
+        key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
+    # See also: https://github.com/actions/setup-go/pull/62
+    - run: echo "GO_VERSION=$(cat .go-version)" >> $GITHUB_ENV
+    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+      uses: actions/setup-go@v2
+      with:
+        go-version: ${{ env.GO_VERSION }}
+    # See also: https://github.com/actions/setup-go/issues/54
+    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+      name: go env
+      run: |
+        echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
+    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+      uses: actions/cache@v2
+      with:
+        path: ${{ env.GOCACHE }}
+        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
+    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    - if: steps.cache-terraform-plugin-dir.outputs.cache-hit != 'true' || steps.cache-terraform-plugin-dir.outcome == 'failure'
+      name: go build
+      run: go build -o terraform-plugin-dir/registry.terraform.io/hashicorp/aws/99.99.99/$(go env GOOS)_$(go env GOARCH)/terraform-provider-aws .
 
   terraform_providers_schema:
     name: terraform providers schema
@@ -99,13 +99,13 @@ jobs:
     #   timeout-minutes: 2
     #   with:
     #     path: terraform-providers-schema
-    #     key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    #     key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
     # - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
     #   uses: actions/cache@v2
     #   timeout-minutes: 2
     #   with:
     #     path: terraform-plugin-dir
-    #     key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    #     key: ${{ runner.os }}-terraform-plugin-dir-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
     # - if: steps.cache-terraform-providers-schema.outputs.cache-hit != 'true' || steps.cache-terraform-providers-schema.outcome == 'failure'
     #   uses: hashicorp/setup-terraform@v1
     #   with:
@@ -142,7 +142,7 @@ jobs:
     #   timeout-minutes: 2
     #   with:
     #     path: ${{ env.GOCACHE }}
-    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
     # - uses: actions/cache@v2
     #   continue-on-error: true
     #   timeout-minutes: 2
@@ -173,7 +173,7 @@ jobs:
     #   timeout-minutes: 2
     #   with:
     #     path: ${{ env.GOCACHE }}
-    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
     # - uses: actions/cache@v2
     #   continue-on-error: true
     #   timeout-minutes: 2
@@ -206,7 +206,7 @@ jobs:
     #   timeout-minutes: 2
     #   with:
     #     path: ${{ env.GOCACHE }}
-    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
     # - uses: actions/cache@v2
     #   continue-on-error: true
     #   timeout-minutes: 2
@@ -234,7 +234,7 @@ jobs:
     #   timeout-minutes: 2
     #   with:
     #     path: ${{ env.GOCACHE }}
-    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
     # - uses: actions/cache@v2
     #   continue-on-error: true
     #   timeout-minutes: 2
@@ -259,20 +259,20 @@ jobs:
     - name: go env
       run: |
         echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    # - uses: actions/cache@v2
-    #   continue-on-error: true
-    #   timeout-minutes: 2
-    #   with:
-    #     path: ${{ env.GOCACHE }}
-    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
-    # - uses: actions/cache@v2
-    #   continue-on-error: true
-    #   timeout-minutes: 2
-    #   with:
-    #     path: ~/go/pkg/mod
-    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    # - run: cd tools && go install github.com/pavius/impi/cmd/impi
-    # - run: impi --local . --scheme stdThirdPartyLocal ./...
+    - uses: actions/cache@v2
+      continue-on-error: true
+      timeout-minutes: 2
+      with:
+        path: ${{ env.GOCACHE }}
+        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
+    - uses: actions/cache@v2
+      continue-on-error: true
+      timeout-minutes: 2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    - run: cd tools && go install github.com/pavius/impi/cmd/impi
+    - run: impi --local . --scheme stdThirdPartyLocal ./...
 
   semgrep:
     runs-on: ubuntu-latest
@@ -304,7 +304,7 @@ jobs:
     #   timeout-minutes: 2
     #   with:
     #     path: terraform-providers-schema
-    #     key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('aws/**') }}
+    #     key: ${{ runner.os }}-terraform-providers-schema-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
     # - name: tfproviderdocs check
     #   run: |
     #     tfproviderdocs check \
