Restores `golangci-lint` for passing checks

--- a/.github/workflows/terraform_provider.yml
+++ b/.github/workflows/terraform_provider.yml
@@ -229,21 +229,21 @@ jobs:
     - name: go env
       run: |
         echo "GOCACHE=$(go env GOCACHE)" >> $GITHUB_ENV
-    # - uses: actions/cache@v2
-    #   continue-on-error: true
-    #   timeout-minutes: 2
-    #   with:
-    #     path: ${{ env.GOCACHE }}
-    #     key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
-    # - uses: actions/cache@v2
-    #   continue-on-error: true
-    #   timeout-minutes: 2
-    #   with:
-    #     path: ~/go/pkg/mod
-    #     key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
-    # - run: cd tools && go install github.com/golangci/golangci-lint/cmd/golangci-lint
-    # - run: golangci-lint run ./aws/...
-    # - run: cd providerlint && golangci-lint run ./...
+    - uses: actions/cache@v2
+      continue-on-error: true
+      timeout-minutes: 2
+      with:
+        path: ${{ env.GOCACHE }}
+        key: ${{ runner.os }}-GOCACHE-${{ hashFiles('go.sum') }}-${{ hashFiles('internal/**') }}
+    - uses: actions/cache@v2
+      continue-on-error: true
+      timeout-minutes: 2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-pkg-mod-${{ hashFiles('go.sum') }}
+    - run: cd tools && go install github.com/golangci/golangci-lint/cmd/golangci-lint
+    - run: golangci-lint run ./internal/...
+    - run: cd providerlint && golangci-lint run ./...
 
   importlint:
     needs: [go_build]
