--- a/.golangci.yml
+++ b/.golangci.yml
@@ -25,6 +25,7 @@ linters:
     - misspell
     - nakedret
     - nilerr
+    - nolintlint
     - staticcheck
     - structcheck
     - unconvert
@@ -54,6 +55,13 @@ linters-settings:
           - strconv.ParseInt
           - strings.SplitN
           - validation.*
+  nolintlint:
+    allow-leading-space: false
+    require-explanation: true
+    require-specific: true
+    allow-no-explanation:
+      - unparam
+      - gomnd
 
 run:
   timeout: 10m
